# cosrun

./: .envrc  .gitignore  Cargo.toml  flake.nix  pyproject.toml
python/cosutils/: __init__.py  nix.py  rustlib.pyi
python/cosutils/rustlib/: __init__.pyi
python/cosutils/rustlib/parsers/: __init__.pyi  jsonc.pyi  nix.pyi
src/: lib.rs  nix.rs
src/parsers/: jsonc.rs  mod.rs  nix.rs  utils.rs
src/utils/: mod.rs  nix.rs
