[package]
name = "cosutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cosutils"
crate-type = ["cdylib"]

[dependencies]
annotate-snippets = "0.11.5"
pyo3 = { version = "0.25.0", features = [
  "extension-module",
  "experimental-inspect",
] }
tvix-eval = { git = "https://code.tvl.fyi/depot.git", version = "0.1.0" }
rnix = "0.11.0"
codemap = "0.1.3"
jsonc-parser = "0.26.2"
